# octm

./: .gitignore  CMakeLists.txt
include/: defs.hpp  idioms.hpp  traits.hpp
include/con/: const_array.hpp  const_map.hpp  hash.hpp  pair.hpp
include/octm/: array.hpp  arrays.hpp  assert.hpp  functions.hpp  idiom.hpp  idioms.hpp  map.hpp  types.hpp
include/octm/bits/: bit_scan.hpp  bit_scan_forward.hpp
include/octm/con/: const_array.hpp  const_bitmap.hpp
include/octm/test/: assert.hpp
include/test/: assert.hpp
source/: CMakeLists.txt  assert.cpp  bit_scan.cpp  const_array.cpp  const_bitmap.cpp  fundamental_holder.cpp  idioms.cpp  octm.cpp
test/: CMakeLists.txt  test_bits_bit_scan.cpp  test_bits_bit_scan_forward.cpp  test_con_const_array.cpp  test_con_const_bitmap.cpp  test_con_fundamental_holder.cpp  test_const_array.cpp  test_const_map.cpp  test_functions.cpp
test/con/: CMakeLists.txt  test_const_array.cpp  test_const_map.cpp  test_pair.cpp
